# HybridSuperQubits

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  1000_jja_vacuum.csv  600_jja_vacuum.csv  CHANGELOG.md  CONTRIBUTING.md  Eigen_silicon_long_new_jj.csv  Examples.ipynb  FB_W4_S8_20231002_151301.hdf5  Fermionic-bosonic qubit.py  INSTALL_APPLE_SILICON.md  LICENSE  README.md  WF_vs_Phi_Ec_40El_005_phi_ext_3.141592653589793_r_0.05.txt  WF_vs_Phi_Ec_40_El_0.05_Delta_40_phi_ext_0_r_0.05.csv  WF_vs_Phi_Ec_40_El_50MHz_Delta_40_phi_ext_1_r_0.05.txt  blochnium_to_ferbo.ipynb  conjWF0xWF1_vs_Phi_Ec_40_El_0.05_Delta_20_phi_ext_1_r_0.05.csv  conjWF0xWF1_vs_Phi_Ec_40_El_0.05_Delta_40_phi_ext_0_r_0.05.csv  conjWF0xWF1_vs_Phi_Ec_40_El_0.05_Delta_40_phi_ext_1_r_0.05.csv  cupy-test.ipynb  double_sweep.ipynb  environment.yml  fbq_odd_states.ipynb  ferbo.py  fermionic_fidelity_Ec_40_Delta_20_phi_ext_0.00.csv  fermionic_fidelity_Ec_40_Delta_20_phi_ext_3.14.csv  fermionicness.ipynb  figurestyle.py  fix_type_annotations.py  functions_fbq.py  generate_regression_values.py  jj.py  jj_analysis.ipynb  main.ipynb  matrix.md  potential_color.py  pyproject.toml  quasi-ferbo.ipynb  (+9 more)
HybridSuperQubits/: __init__.py  andreev.py  circuit.py  ferbo.py  ferbonium.py  fluxonium.py  fluxonium_manager.py  gatemon.py  gatemonium.py  jja.py  operators.py  qubit_base.py  resonator.py  storage.py  utilities.py
JJ_array_characterization/: Characterization_JJ_array.ipynb  JJ_array_membranes_fast_HFSSDesign1.eig  one_array_76_substrate.eig  one_array_76_substrate_connector.eig  one_array_76_substrate_connector_cable.eig  one_array_76_substrate_connector_cable_connections.eig  one_array_76_total.eig  one_array_76_total_circle.eig  one_array_76_total_circle_membrane.eig  one_array_76_total_nomembrane.eig  test_one_array.eig  test_one_array_370.eig
article/: figures.ipynb  main.ipynb  test.ipynb
data/: Coherences_Ec_40_Delta_20_phi_ext_0.00.csv  WF_vs_Phi_Ec_40_El_0.05_Delta_20_phi_ext_0_r_0.05.csv  WF_vs_Phi_Ec_40_El_0.05_Delta_20_phi_ext_1_r_0.05.csv  WF_vs_Phi_Ec_40_El_0.05_Delta_40_phi_ext_1_r_0.0.csv  WF_vs_Phi_Ec_40_El_0.05_Delta_40_phi_ext_1_r_0.0.txt  junctions.yaml  (+4 more)
docs/: conf.py  (+1 more)
(+367 files in other folders)
