[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HybridSuperQubits"
version = "0.1.7"
description = "Package to simulate hybrid superconducting qubits"
authors = [
    { name = "Joan Caceres", email = "contact@joancaceres.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy>=1.19.3",
    "matplotlib>=3.3.4",
    "scqubits>=3.0",
    "h5py>=3.0",
    "ipywidgets>=8.0",
    "pyyaml>=6.0",
    "cython",
    "setuptools>=67.0.0",
    "wheel"
]

[project.optional-dependencies]
scipy = [
    "scipy>=1.5,<1.13"
]

[tool.setuptools]
packages = ["HybridSuperQubits"]